# PantheonOS

./: .dockerignore  .env.test  .gitignore  MANIFEST.in  README.md  build_backend.spec  nats-ws.conf  pyproject.toml
.agents/: README.md  conventions.md  memory-learning-systems.md  overview.md
.claude/: settings.local.json
.github/workflows/: test.yml
benchmarks/bixbench/: README.md  __init__.py  adapter.py  batch_learn.py  cli.py  compare.py  environment.yml  grader.py  prepare_capsules.py  run.py
docker/: Dockerfile  docker-entrypoint-dual-mode.sh  docker-entrypoint.sh  nats-ws.conf
docs/: Makefile  dev_with_env.sh  watch_docs.py
docs/scfm/: plugin_developer_guide.md  real_world_data_test_plan.md  stage_wrapup_summary.md
docs/source/: _toc.yml  architecture.rst  concepts.md  conf.py  contributing.rst  highlights.rst  index.md  index.rst  overview.rst  quickstart.rst
examples/: bioagent.md  chat_with_swarm_team.py  coderun_bot.py  paper_reporter.py  reasoning_bot.py  search_bot.py
examples/brain_strom/: brain_strom.py
examples/chatbots/: coderun_bot.py  gemini.py  r_bot.py  search_bot.py  shell_bot.py
examples/chatroom/: single_cell_analysis.yaml  single_cell_anslysis.py
examples/cli_configs/: omics_cli_agent.yaml
examples/code_distillation/: evaluator.py  run.py
examples/evolution_gene_panel/: evaluator.py  rl_gene_panel.py  run_evolution.py
examples/evolution_harmonypy/: evaluator.py  run_evolution.py
examples/evolution_topact/: evaluator.py  run_evolution.py
examples/fastq_processing/: agent.md
examples/paper_reporter/: paper_reporter.py
examples/paper_reporter_v2/: paper_reporter.py  report.md
examples/sc_analysis_cli/: main.py
examples/single_cell_spatial_analysis/: omics_expert.py  omics_expert_team.py
fm_documentation/: README.md  SPEC_TEMPLATE.md
fm_documentation/models/: atacformer.md  cell2sentence.md  pulsar.md
pantheon/: __init__.py  __main__.py  agent.py  background.py  constant.py  heartbeat.py  memory.py  packages.py  providers.py  reasoning.py  remote.py  settings.py  smart_func.py  team.py  toolset.py  types.py
pantheon/ace/: __init__.py  pipeline.py  skill_loader.py  skillbook.py
pantheon/chatroom/: __init__.py  __main__.py  endpoint.py  export.py  file_manager.py  nats-ws.conf  nats_manager.py  projects.py  python_interpreter.py  room.py  special_agents.py  start.py  stream.py  thread.py
pantheon/claw/: __init__.py  __main__.py  bridge.py  config.py  manager.py  registry.py  runtime.py
pantheon/cli/: README.md  README_BIOINFORMATICS.md  README_INPUT.md  atac_simple.py  build_rag_db.py  core.py
pantheon/compression/: __init__.py  compressor.py  prompts.py
pantheon/endpoint/: __init__.py  __main__.py  core.py  endpoint.yaml  gateway.py  hub.py  mcp.py  toolsets.py
pantheon/evolution/: __init__.py  __main__.py  config.py  database.py  evaluator.py  program.py  prompt_builder.py  result.py  team.py  visualizer.py
pantheon/factory/: __init__.py  agents.yaml  chatroom_templates.yaml  chatrooms.yaml  default_agents_templates.yaml  models.py  template_io.py  template_manager.py
pantheon/generator/: EXTERNAL_TOOLSET_AGENT_INTEGRATION.md  EXTERNAL_TOOLSET_DESIGN.md  TOOLSET_GENERATION_TEMPLATE.md  __init__.py  __main__.py  smart_standalone.py
pantheon/internal/: __init__.py  background_agent.py  system_prompt.py
pantheon/message/: attachment_detection.py  attachment_pipeline.py
pantheon/package_runtime/: __init__.py  context.py  manager.py  runtime.py
pantheon/rag/: __main__.py  build.py  text.py  vectordb.py  workflow_build_db.py  wrap.py
pantheon/remote/: __init__.py  agent.py  factory.py  memory.py  remote.py  toolset.py
pantheon/repl/: __init__.py  __main__.py  bio_handler.py  conversationRecovery.py  core.py  prompt_app.py  renderers.py  sessionRestore.py  sessionStorage.py  setup_wizard.py  single.py  task_renderers.py  team.py  ui.py  utils.py
pantheon/store/: client.py  seed.py
pantheon/team/: aat.py  pantheon.py  plugin.py  plugin_registry.py  swarm.py
pantheon/toolsets/: __init__.py  __main__.py  code_search.py  file_editor.py  file_manager.py  gene_panel_selection_config.py  gene_panel_selection_tool.py  integrated_notebook.py  jupyter_kernel.py  latex.py  notebook.py  package.py  plan_mode.py  scraper.py  skillbook.py  vector_rag.py  web.py  web_urllib.py  workflow.py
pantheon/utils/: image_detection.py  llm.py  llm_catalog.json  llm_providers.py  log.py  memory_compress.py  message_formatter.py  misc.py  model_selector.py  provider_registry.py  retry.py  template.py  token_optimization.py  tool_pairing.py  vision.py  vision_capability.py
pantheum/: agent.py  chat.py  meeting.py  remote.py  smart_func.py  task.py
pantheum/repl/: meeting.py  single.py
pantheum/tools/: duckduckgo.py  web_crawl.py
pantheum/utils/: misc.py
scripts/: benchmark_multi_provider.py  benchmark_token_optimization_live.py  benchmark_token_optimizations.py  seed_omicclaw.py
synago/: agent.py
tests/: conftest.py  test_ace.py  test_agent.py  test_attachment_integration.py  test_background.py  test_chat_rename_guards.py  test_chatname.py  test_chatroom_api_key_status.py  test_chatroom_create_chat_config.py  test_chatroom_memory_e2e.py  test_chatroom_resilience.py  test_chatroom_saved_models.py  test_chatroom_start.py  test_claw_gateway.py  test_code_toolset.py  test_compression.py  test_context_isolation.py  test_conversation_recovery.py  test_fetch_resources_batch.py  test_file_manager.py  test_file_manager_broken_symlink.py  test_gemini_adapter_base_url.py  test_gemini_cli_adapter_parsing.py  test_gemini_image_output.py  test_gemini_tool_calling.py  test_glm_5_1_support.py  test_image_detection.py  test_image_generation.py  test_integration_memory_learning.py  test_knowledge.py  test_learning.py  test_llm_base_resolution.py  test_llm_provider_config.py  test_markdown_parser.py  test_mcp_packages_integration.py  test_memory_properties.py  test_model_selector.py  test_multiagent_chatroom.py  test_nats_streaming.py  test_notebook_concurrency.py  (+35 more)
upstream_skills/: scfm-workflow.md
(+735 files in other folders)
