[project]
name = "pantheon-agents"
description = "A framework for building distributed evolvable multi-agent system."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "executor-engine>=0.3.3",
    "fire>=0.7.0",
    "funcdesc>=0.1.8",
    "litellm>=1.56.4",
    "loguru>=0.7.3",
    "openai>=1.58.1",
    "pillow>=10.4.0",
    "rich>=13.9.4",
    "rich-pyfiglet",
    "ddgs>=9.5.2",
]
dynamic = ["version"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
pythonpath = ["."]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.4",
    "pytest-asyncio>=0.25.0",
]
slack = [
    "slack-sdk",
    "slack-bolt",
]

[dependency-groups]
dev = [
    "ipdb>=0.13.13",
    "ipython>=8.30.0",
    "pytest>=8.3.4",
    "pytest-asyncio>=0.25.0",
    "crawl4ai>=0.5.0",
    "duckduckgo-search>=7.1.1",
    "pip>=24.3.1",
    "textual-dev>=1.7.0",
    "build>=1.2.2.post1",
    "slack-sdk",
    "slack-bolt",
]

[tool.setuptools]
packages = {find = {}}

[tool.setuptools.dynamic]
version = {attr = "pantheon.__version__"} 
