[project]
name = "pantheon-agents"
description = "A framework for building distributed evolvable multi-agent system."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "executor-engine>=0.3.3",
    "fire>=0.7.0",
    "funcdesc>=0.1.8",
    "litellm>=1.56.4",
    "loguru>=0.7.3",
    "openai>=1.58.1",
    "pillow>=10.4.0",
    "rich>=13.9.4",
    "rich-pyfiglet",
    "fastmcp>=2.11.0",
    "nats-py>=2.6.0",
    "httpx>=0.28.1",
    "diskcache",
]
dynamic = ["version"]

# CLI entry removed - now in separate pantheon-cli package
[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
pythonpath = ["."]
markers = [
    "api: marks tests that require API access (deselect with '-k \"not api\"')"
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.4",
    "pytest-asyncio>=0.25.0",
]
slack = [
    "slack-sdk",
    "slack-bolt",
]
toolsets = [
    "ddgs>=9.5.2",
    "crawl4ai>=0.5.0",
    "matplotlib>=3.10.3",
    "pandas",
    "cloudpickle>=3.0.0",
    "aiofiles>=24.0.0",
    "PyMuPDF>=1.25.5",
    "lancedb>=0.20.0",
    "jupyter-client>=8.0.0",
    "ipykernel>=6.25.0",
    "nbformat>=5.10.0",
    "jedi>=0.19.0",
]
knowledge = [
    "llama-index-core>=0.11.0",
    "llama-index-llms-openai",
    "llama-index-vector-stores-qdrant>=0.3.0",
    "qdrant-client>=1.12.0",
    "llama-index-embeddings-openai>=0.2.0",
    "llama-index-readers-file>=0.2.0",
    "docx2txt>=0.8",
    "fastembed>=0.2.0",
    "llama-index-postprocessor-flashrank-rerank>=0.2.0",
    "llama-index-postprocessor-cohere-rerank",
    "nbconvert"
]

[dependency-groups]
dev = [
    "ipdb>=0.13.13",
    "ipython>=8.30.0",
    "pytest>=8.3.4",
    "pytest-asyncio>=0.25.0",
    "crawl4ai>=0.5.0",
    "duckduckgo-search>=7.1.1",
    "pip>=24.3.1",
    "textual-dev>=1.7.0",
    "build>=1.2.2.post1",
    "slack-sdk",
    "slack-bolt",
]

[tool.setuptools]
packages = {find = {}}

[tool.setuptools.dynamic]
version = {attr = "pantheon.__version__"} 
