[project]
name = "pantheon-agents"
description = "A framework for building distributed evolvable multi-agent system."
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "Weize Xu"},
    {name = "Quan Zhong"},
    {name = "Zehua Zeng"},
    {name = "Xuehai Wang"},
]
keywords = ["multi-agent", "llm", "ai", "distributed", "mcp", "autonomous-agents"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    # Core
    "tomli>=2.0.1; python_version < '3.11'",
    "diff-match-patch>=20241021",
    "executor-engine>=0.3.3",
    "fire>=0.7.0",
    "funcdesc>=0.1.8",
    "litellm>=1.80.10",
    "loguru>=0.7.3",
    "openai>=2.0.0",
    "pillow>=10.4.0",
    "rich>=14.0.0",
    "rich-pyfiglet",
    "fastmcp>=2.11.0",
    "nats-py>=2.10.0",
    "nkeys",
    "PyNaCl>=1.5.0",
    "httpx>=0.28.1",
    "diskcache",
    "python-frontmatter>=1.1.0",
    "prompt-toolkit>=3.0.50",
    # Toolsets
    "ddgs>=9.5.2",
    "crawl4ai>=0.5.0",
    "matplotlib>=3.10.3",
    "pandas",
    "cloudpickle>=3.0.0",
    "PyMuPDF>=1.25.5",
    "lancedb>=0.20.0",
    "jupyter-client>=8.0.0",
    "ipykernel>=6.25.0",
    "nbformat>=5.10.0",
    "jedi>=0.19.0",
    "tree-sitter>=0.24.0",
    "tree-sitter-python>=0.24.0",
    "tree-sitter-javascript>=0.24.0",
    # Server
    "nats-server-bin>=2.10.0",
]
dynamic = ["version"]

[project.urls]
Homepage = "https://github.com/aristoteleo/pantheon-agents"
Repository = "https://github.com/aristoteleo/pantheon-agents"
Issues = "https://github.com/aristoteleo/pantheon-agents/issues"

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
pythonpath = ["."]
markers = [
    "api: marks tests that require API access (deselect with '-k \"not api\"')",
    "integration: marks tests that require heavier local deps (e.g., scanpy)",
    "live_llm: marks tests that require live LLM API calls (requires OPENAI_API_KEY)",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.4",
    "pytest-asyncio>=0.25.0",
    "pytest-timeout>=2.3.1",
]
slack = [
    "slack-sdk",
    "slack-bolt",
]
r = [
    # R language support for notebooks (requires R installed on system)
    "rpy2>=3.5.0",
]
knowledge = [
    "llama-index-core>=0.11.0",
    "llama-index-llms-openai",
    "llama-index-vector-stores-qdrant>=0.3.0",
    "qdrant-client>=1.12.0",
    "llama-index-embeddings-openai>=0.2.0",
    "llama-index-readers-file>=0.2.0",
    "docx2txt>=0.8",
    "fastembed>=0.2.0",
    "llama-index-postprocessor-flashrank-rerank>=0.2.0",
    "llama-index-postprocessor-cohere-rerank",
    "nbconvert>=7.16.0",
]

[dependency-groups]
dev = [
    "ipdb>=0.13.13",
    "ipython>=8.30.0",
    "pytest>=8.3.4",
    "pytest-asyncio>=0.25.0",
    "pip>=24.3.1",
    "textual-dev>=1.7.0",
    "build>=1.2.2.post1",
    "slack-sdk",
    "slack-bolt",
]

[tool.setuptools]
packages = {find = {where = ["."], exclude = ["tests*", "examples*", "tmp*", "try*", "docs*"]}}

[tool.setuptools.package-data]
"pantheon.factory" = [
    "templates/**/*.md",
    "templates/**/*.json",
    "templates/*.json",
]
"pantheon.toolsets.database_api" = [
    "schemas/*.json",
]

[tool.setuptools.dynamic]
version = {attr = "pantheon.__version__"}

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"
